FIX consistent spacing

--- a/src/styles/spacing.module.pcss
+++ b/src/styles/spacing.module.pcss
@@ -30,6 +30,9 @@
 .px {
   @apply px-4 md:px-6 lg:px-10;
 }
+.px-half {
+  @apply px-2 md:px-3 lg:px-5;
+}
 .py {
   @apply py-4 md:py-6 lg:py-10;
 }
